2016-12-19  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/_tovs_defs.py:

	- Fix creation of array with [masked], shutting up UserWarning

	* typhon/datasets/model.py(ERAInterim):

	- bugfix, needs section attribute as well nowadays

	* typhon/datasets/tovs.py(HIRS):

	- update to modern progressbar usage, shutting up warning

	- use self.n_perline instead of hardcoded 56

	* typhon/math/array.py(mad_outliers):

	- don't fail when all are masked already

2016-12-14  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/tovs.py:

	(HIRS): Add new attribute temperature_fields that lists all
	temperatures that can be requested, and populate with temperatures
	available in all HIRS.

	(HIRSKLM): Add temperature fields only available in KLM

	(HIRS4): Add temperature field only available in HIRS4

2016-12-14  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/plots/plots.py(scatter_density_plot_matrix):

	- Permit to pass a regular 2-D array as well (but see warning in
	documentation).

2016-12-14  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/plots/plots.py(scatter_density_plot_matrix):

	- Removed erroneous reference to hist2d, replaced by hexbin

	* typhon/datasets/tovs.py:

	(HIRS.__init__):

	- Inform that hrs_scnlin is always needed

	(HIRS.read_period):

	- Suppress FutureWarning triggered by masked array module when
	selecting multiple fields from a structured masked array

	* typhon/datasets/dataset.py:

	(Dataset):

	- Add attribute `mandatory_fields`.  When populated, Dataset.read will
	ensure that those fields are always passed on to the low-level,
	instrument-specific reading routine.

	(Dataset.read_period):

	- On 29 November I added that ValueError should be caught here.  Undo
	this; it catches too many false positives.  Instead, ValueError should
	be caught at a lower level and then chained into a descendent of
	DataFileError.

2016-12-14  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/oem/__init__.py: Divided package content into submodules.
