@@ -1,3 +1,15 @@
+2017-01-06  Gerrit Holl  <g.holl@reading.ac.uk>
+
+	* typhon/datasets/tovs.py(HIRS):
+
+	(.filter_firstlines) (.update_firstline_db):
+
+	- Fix bug where I used the index in the file to create the firstline
+	db, but the hrs_scnlin field to apply it.  This lead to errors in
+	cases where there are gaps in hrs_scnlin in the early part of the
+	file, and thus to folds in the time field and remaining duplicate
+	lines.
+
 2016-12-19  Gerrit Holl  <g.holl@reading.ac.uk>
 
 	* typhon/datasets/_tovs_defs.py:
